--- a/item.html
+++ b/item.html
@@ -1,99 +1,104 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <title>Набор для путешествий «Baxter of California»</title>
 </head>
+
 <body>
-   <header>
-    <div class="nav-bar">
-      <ul class="nav-list">
-        <li><img src="/logo.jpg" alt="Barbershop" width="100" height="20">
-          <a href="index.html" title="Barbershop"></a>
-        </li>
-        <li>
-          <a href="#" title="">Информация</a>
-        </li>
-        <li>
-          <a href="#" title="">Новости</a>
-        </li>
-        <li>
-          <a href="#" title="">Прайс лист</a>
-        </li>
-        <li>
-          <a href="#" title="">Магазин</a>
-        </li>
-        <li>
-          <a href="#" title="">Контакты</a>
-        </li>
-      </ul>
-    </div>
-    <div class="login-btn">
-      <a href="#" title="Войти">Вход</a>
-    </div>
-  </header>
+    <header>
+        <div class="nav-bar">
+            <ul class="nav-list">
+                <li>
+                    <a href="index.html" title="Barbershop">
+                        <img src="/logo.jpg" alt="Barbershop" width="100" height="20">
+                    </a>
+                </li>
+                <li>
+                    <a href="#" title="">Информация</a>
+                </li>
+                <li>
+                    <a href="#" title="">Новости</a>
+                </li>
+                <li>
+                    <a href="#" title="">Прайс лист</a>
+                </li>
+                <li>
+                    <a href="#" title="">Магазин</a>
+                </li>
+                <li>
+                    <a href="#" title="">Контакты</a>
+                </li>
+            </ul>
+        </div>
+        <div class="login-btn">
+            <a href="#" title="Войти">Вход</a>
+        </div>
+    </header>
     <main>
-        <h1>
-            Набор для путешествий «Baxter of California»
-        </h1>
+        <h1>Набор для путешествий «Baxter of California»</h1>
         <div class="nav-chain">
-               <ul>
-                   <li>
-                       <a href="index.html" title="Главная">Главная</a>
-                   </li>
-                   <li>
-                       <a href="#" title="Магазин">Магазин</a>
-                   </li>
-                   <li>
-                       <a href="#" title="Средства для ухода">Средства для ухода</a>
-                   </li>
-                   <li>
-                       <a href="#" title="Набор для путешествий «Baxter of California»">Набор для путешествий «Baxter of California»</a>
-                   </li>
-               </ul>
-           </div>
-           <div class="gallery">
-               <img src="/img/item.jpg" alt="" width="100" height="100">
-               <img src="/img/item.jpg" alt="" width="100" height="100">
-               <img src="/img/item.jpg" alt="" width="100" height="100">
-               <img src="/img/item.jpg" alt="" width="100" height="100">
-           </div>
-           
-           <div class="description">
-               <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
-               <div class="price">2900 руб.</div>
-               <a href="#" title="Купить">Купить</a>
-           </div>
-           <div class="set">
-               <p>В набор входят:</p>
-               <ul class="set-items">
-                   <li>Средство для умывания (50 мл)</li>
-                   <li>Увлажняющий крем (50 мл)</li>
-                   <li>Крем для бритья (50 мл)</li>
-                   <li>Крем после бритья, шампунь (50 мл)</li>
-                   <li>Удобная кожаная косметичка</li>
-               </ul>
-           </div>
+            <ul>
+                <li>
+                    <a href="index.html" title="Главная">Главная</a>
+                </li>
+                <li>
+                    <a href="#" title="Магазин">Магазин</a>
+                </li>
+                <li>
+                    <a href="#" title="Средства для ухода">Средства для ухода</a>
+                </li>
+                <li>
+                    <a href="#" title="Набор для путешествий «Baxter of California»">Набор для путешествий «Baxter of California»</a>
+                </li>
+            </ul>
+        </div>
+        <div class="gallery">
+            <img src="/img/item.jpg" alt="" width="100" height="100">
+            <img src="/img/item.jpg" alt="" width="100" height="100">
+            <img src="/img/item.jpg" alt="" width="100" height="100">
+            <img src="/img/item.jpg" alt="" width="100" height="100">
+        </div>
+
+        <div class="description">
+            <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
+            <div class="price">2900 руб.</div>
+            <a href="#" title="Купить">Купить</a>
+        </div>
+        <div class="set">
+            <p>В набор входят:</p>
+            <ul class="set-items">
+                <li>Средство для умывания (50 мл)</li>
+                <li>Увлажняющий крем (50 мл)</li>
+                <li>Крем для бритья (50 мл)</li>
+                <li>Крем после бритья, шампунь (50 мл)</li>
+                <li>Удобная кожаная косметичка</li>
+            </ul>
+        </div>
     </main>
-    
+
     <footer>
-       <div class="contacts">
-            <p>БАРБЕРШОП «БОРОДИНСКИЙ»<br>
-            АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б.КОНЮШЕННАЯ, Д. 19/8 <br> 
-            <a href="#" title="Карта">КАК НАС НАЙТИ?</a> <br>
-            ТЕЛЕФОН: +7 (495) 666-02-66 <br>
+        <div class="contacts">
+            <p>БАРБЕРШОП «БОРОДИНСКИЙ»
+                <br> АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б.КОНЮШЕННАЯ, Д. 19/8
+                <br>
+                <a href="#" title="Карта">КАК НАС НАЙТИ?</a>
+                <br> ТЕЛЕФОН: +7 (495) 666-02-66
+                <br>
             </p>
-       </div>
-       <div class="soc-links">
-           <p>Давайте дружить!</p>
-           <a href="#" title="VK" target="_blank"></a>
-           <a href="#" title="Facebook" target="_blank"></a>
-           <a href="#" title="Instagramm" target="_blank"></a>   
-       </div>
-       <div class="developed">
-          <p>Разработано:</p>
-           <a href="https://htmlacademy.ru/" title="html academy">htmlacademy.ru</a>   
-       </div>
-   </footer>
+        </div>
+        <div class="soc-links">
+            <p>Давайте дружить!</p>
+            <a href="#" title="VK" target="_blank"></a>
+            <a href="#" title="Facebook" target="_blank"></a>
+            <a href="#" title="Instagramm" target="_blank"></a>
+        </div>
+        <div class="developed">
+            <p>Разработано:</p>
+            <a href="https://htmlacademy.ru/" title="html academy">htmlacademy.ru</a>
+        </div>
+    </footer>
 </body>
+
 </html>
