--- a/item.html
+++ b/item.html
@@ -16,19 +16,19 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" title="">Информация</a>
+                    <a href="#">Информация</a>
                 </li>
                 <li>
-                    <a href="#" title="">Новости</a>
+                    <a href="#">Новости</a>
                 </li>
                 <li>
-                    <a href="#" title="">Прайс лист</a>
+                    <a href="#">Прайс лист</a>
                 </li>
                 <li>
-                    <a href="#" title="">Магазин</a>
+                    <a href="#">Магазин</a>
                 </li>
                 <li>
-                    <a href="#" title="">Контакты</a>
+                    <a href="#">Контакты</a>
                 </li>
             </ul>
         </div>
@@ -50,7 +50,7 @@
                     <a href="#" title="Средства для ухода">Средства для ухода</a>
                 </li>
                 <li>
-                    <a href="#" title="Набор для путешествий «Baxter of California»">Набор для путешествий «Baxter of California»</a>
+                    Набор для путешествий «Baxter of California»
                 </li>
             </ul>
         </div>
@@ -80,12 +80,10 @@
 
     <footer>
         <div class="contacts">
-            <p>БАРБЕРШОП «БОРОДИНСКИЙ»
-                <br> АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б.КОНЮШЕННАЯ, Д. 19/8
-                <br>
-                <a href="#" title="Карта">КАК НАС НАЙТИ?</a>
-                <br> ТЕЛЕФОН: +7 (495) 666-02-66
-                <br>
+            <p>Барбершоп «Бородинский»<br>
+               Адрес: г. Санкт-Петербург, ул. Б.Конюшная, д. 19/8<br>
+               <a href="#" title="Карта">Как нас найти?</a> <br> 
+               Телефон: +7 (495) 666-02-66<br>
             </p>
         </div>
         <div class="soc-links">
@@ -96,7 +94,7 @@
         </div>
         <div class="developed">
             <p>Разработано:</p>
-            <a href="https://htmlacademy.ru/" title="html academy">htmlacademy.ru</a>
+            <a href="https://htmlacademy.ru/" title="html academy">Htmlacademy.ru</a>
         </div>
     </footer>
 </body>
