--- a/catalog.html
+++ b/catalog.html
@@ -16,19 +16,19 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" title="">Информация</a>
+                    <a href="#">Информация</a>
                 </li>
                 <li>
-                    <a href="#" title="">Новости</a>
+                    <a href="#">Новости</a>
                 </li>
                 <li>
-                    <a href="#" title="">Прайс лист</a>
+                    <a href="#">Прайс лист</a>
                 </li>
                 <li>
-                    <a href="#" title="">Магазин</a>
+                    <a href="#">Магазин</a>
                 </li>
                 <li>
-                    <a href="#" title="">Контакты</a>
+                    <a href="#">Контакты</a>
                 </li>
             </ul>
         </div>
@@ -42,13 +42,13 @@
             <div class="nav-chain">
                 <ul>
                     <li>
-                        <a href="index.html" title="Главная">Главная</a>
+                        <a href="index.html">Главная</a>
                     </li>
                     <li>
-                        <a href="#" title="Магазин">Магазин</a>
+                        <a href="#">Магазин</a>
                     </li>
                     <li>
-                        <a href="#" title="Средства для ухода">Средства для ухода</a>
+                        <a href="#">Средства для ухода</a>
                     </li>
                 </ul>
             </div>
@@ -68,7 +68,7 @@
                         <input type="checkbox" name="suave" checked id="suave">Suavecito
                     </label>
                     <label for="mng">
-                        <input type="checkbox" name="m&g" id="mng">Malin+Goetz
+                        <input type="checkbox" name="mng" id="mng">Malin+Goetz
                     </label>
                     <label for="murr">
                         <input type="checkbox" name="murr" id="murr">Murray's
@@ -95,37 +95,37 @@
         </div>
         <div class="items-list">
             <article>
-                <img src="/item.jpg" alt="" width="100" height="100">
+                <img src="/item.jpg" alt="Набор для путешествий «Baxter of California»" width="100" height="100">
                 <h3>Набор для путешествий <span class="brand">«Baxter of California»</span></h3>
                 <div class="price">2900 руб.</div>
                 <a href="#" title="Купить">Купить</a>
             </article>
             <article>
-                <img src="/item.jpg" alt="" width="100" height="100">
+                <img src="/item.jpg" alt="Увлажняющий кондиционер «Baxter of California»" width="100" height="100">
                 <h3>Увлажняющий кондиционер <span class="brand">«Baxter of California»</span></h3>
                 <div class="price">750 руб.</div>
                 <a href="#" title="Купить">Купить</a>
             </article>
             <article>
-                <img src="/item.jpg" alt="" width="100" height="100">
-                <h3>Гель для волос <span class="brand">«SUAVECITO»</span></h3>
+                <img src="/item.jpg" alt="Гель для волос «Suavecito»" width="100" height="100">
+                <h3>Гель для волос <span class="brand">«Suavecito»</span></h3>
                 <div class="price">290 руб.</div>
                 <a href="#" title="Купить">Купить</a>
             </article>
             <article>
-                <img src="/item.jpg" alt="" width="100" height="100">
+                <img src="/item.jpg" alt="Глина для укладки волос «American crew»" width="100" height="100">
                 <h3>Глина для укладки волос <span class="brand">«American crew»</span></h3>
                 <div class="price">500 руб.</div>
                 <a href="#" title="Купить">Купить</a>
             </article>
             <article>
-                <img src="/item.jpg" alt="" width="100" height="100">
-                <h3>Гель для волос <span class="brand">«AMERICAN CREW»</span></h3>
+                <img src="/item.jpg" alt="Гель для волос «American crew»" width="100" height="100">
+                <h3>Гель для волос <span class="brand">«American crew»</span></h3>
                 <div class="price">300 руб.</div>
                 <a href="#" title="Купить">Купить</a>
             </article>
             <article>
-                <img src="/item.jpg" alt="" width="100" height="100">
+                <img src="/item.jpg" alt="Набор для бритья «Baxter of California»" width="100" height="100">
                 <h3>Набор для бритья <span class="brand">«Baxter of California»</span></h3>
                 <div class="price">3900 руб.</div>
                 <a href="#" title="Купить">Купить</a>
@@ -135,16 +135,16 @@
         <div class="page-list">
             <ul>
                 <li>
-                    <a href="#" title="">1</a>
+                    <a href="#">1</a>
                 </li>
                 <li>
-                    <a href="#" title="" class="act-page">2</a>
+                    <a href="#" class="act-page">2</a>
                 </li>
                 <li>
-                    <a href="#" title="">3</a>
+                    <a href="#">3</a>
                 </li>
                 <li>
-                    <a href="#" title="">4</a>
+                    <a href="#">4</a>
                 </li>
             </ul>
         </div>
@@ -154,12 +154,10 @@
 
     <footer>
         <div class="contacts">
-            <p>барбершоп «бородинский»
-                <br> адрес: г. санкт-петербург, ул. б.конюшная, д. 19/8
-                <br>
-                <a href="#" title="Карта">как нас найти?</a>
-                <br> телефон: +7 (495) 666-02-66
-                <br>
+            <p>Барбершоп «Бородинский»<br>
+               Адрес: г. Санкт-Петербург, ул. Б.Конюшная, д. 19/8<br>
+               <a href="#" title="Карта">Как нас найти?</a> <br> 
+               Телефон: +7 (495) 666-02-66<br>
             </p>
         </div>
         <div class="soc-links">
@@ -170,10 +168,9 @@
         </div>
         <div class="developed">
             <p>Разработано:</p>
-            <a href="https://htmlacademy.ru/" title="html academy">htmlacademy.ru</a>
+            <a href="https://htmlacademy.ru/" title="html academy">Htmlacademy.ru</a>
         </div>
     </footer>
 
 </body>
-
 </html>
