Добавление изображений и файла стиля
Были добавлены контентные изображения, а так же файл стиля.

--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
             <ul class="nav-list">
                 <li>
                     <a href="index.html" title="Barbershop">
-                        <img src="/logo.jpg" alt="Barbershop" width="100" height="20">
+                        <img src="/img/logo.png" alt="Barbershop" width="111" height="24">
                     </a>
                 </li>
                 <li>
@@ -95,37 +95,37 @@
         </div>
         <div class="items-list">
             <article>
-                <img src="/item.jpg" alt="Набор для путешествий «Baxter of California»" width="100" height="100">
+                <img src="/img/journey-boc.jpg" alt="Набор для путешествий «Baxter of California»" width="220" height="165">
                 <h3>Набор для путешествий <span class="brand">«Baxter of California»</span></h3>
                 <div class="price">2900 руб.</div>
                 <a href="#" title="Купить">Купить</a>
             </article>
             <article>
-                <img src="/item.jpg" alt="Увлажняющий кондиционер «Baxter of California»" width="100" height="100">
+                <img src="/img/cond-boc.jpg" alt="Увлажняющий кондиционер «Baxter of California»" width="220" height="165">
                 <h3>Увлажняющий кондиционер <span class="brand">«Baxter of California»</span></h3>
                 <div class="price">750 руб.</div>
                 <a href="#" title="Купить">Купить</a>
             </article>
             <article>
-                <img src="/item.jpg" alt="Гель для волос «Suavecito»" width="100" height="100">
+                <img src="/img/hair-suave.jpg" alt="Гель для волос «Suavecito»" width="220" height="165">
                 <h3>Гель для волос <span class="brand">«Suavecito»</span></h3>
                 <div class="price">290 руб.</div>
                 <a href="#" title="Купить">Купить</a>
             </article>
             <article>
-                <img src="/item.jpg" alt="Глина для укладки волос «American crew»" width="100" height="100">
+                <img src="/img/hair-ac.jpg" alt="Глина для укладки волос «American crew»" width="220" height="165">
                 <h3>Глина для укладки волос <span class="brand">«American crew»</span></h3>
                 <div class="price">500 руб.</div>
                 <a href="#" title="Купить">Купить</a>
             </article>
             <article>
-                <img src="/item.jpg" alt="Гель для волос «American crew»" width="100" height="100">
+                <img src="/img/hair-ac2.jpg" alt="Гель для волос «American crew»" width="220" height="165">
                 <h3>Гель для волос <span class="brand">«American crew»</span></h3>
                 <div class="price">300 руб.</div>
                 <a href="#" title="Купить">Купить</a>
             </article>
             <article>
-                <img src="/item.jpg" alt="Набор для бритья «Baxter of California»" width="100" height="100">
+                <img src="/img/shaving-boc.jpg" alt="Набор для бритья «Baxter of California»" width="220" height="165">
                 <h3>Набор для бритья <span class="brand">«Baxter of California»</span></h3>
                 <div class="price">3900 руб.</div>
                 <a href="#" title="Купить">Купить</a>
