--- a/item.html
+++ b/item.html
@@ -12,7 +12,7 @@
             <ul class="nav-list">
                 <li>
                     <a href="index.html" title="Barbershop">
-                        <img src="/logo.jpg" alt="Barbershop" width="100" height="20">
+                        <img src="/img/logo.png" alt="Barbershop" width="111" height="24">
                     </a>
                 </li>
                 <li>
@@ -55,10 +55,10 @@
             </ul>
         </div>
         <div class="gallery">
-            <img src="/img/item.jpg" alt="" width="100" height="100">
-            <img src="/img/item.jpg" alt="" width="100" height="100">
-            <img src="/img/item.jpg" alt="" width="100" height="100">
-            <img src="/img/item.jpg" alt="" width="100" height="100">
+            <img src="/img/item-1.jpg" alt="" width="980" height="1062">
+            <img src="/img/item-2.jpg" alt="" width="140" height="149">
+            <img src="/img/item-3.jpg" alt="" width="140" height="149">
+            <img src="/img/item-4.jpg" alt="" width="140" height="149">
         </div>
 
         <div class="description">
